--- a/play.html
+++ b/play.html
@@ -10,36 +10,23 @@
     <h1>produced by Avinash Chundu</h1>
     <h3>A Woman of No Importance A Play</h3>
     <h4> The Drawing-room at Hunstanton Chase</h4>
-    <pre>
-        MRS. ALLONBY.  What a comfort it is to have got rid of the men for a
-little!
+  
+        <h6 class=" ALLONBY name"> ALLONBY </h6> <p class=" ALLONBY speech">What a comfort it is to have got rid of the men for a little!</p> 
 
-LADY STUTFIELD.  Yes; men persecute us dreadfully, don’t they?
+        <h6 class="LADY name">LADY STUTFIELD</h6> <p class="lady speech"> Yes; men persecute us dreadfully, don’t they?</p>
 
-MRS. ALLONBY.  Persecute us?  I wish they did.
+        <h6 class=" ALLONBY name"> ALLONBY </h6> <p class="ALLONBY speech"> Persecute us?  I wish they did.</p> 
 
-LADY HUNSTANTON.  My dear!
+        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY Speech"> My dear!</p>
 
-MRS. ALLONBY.  The annoying thing is that the wretches can be perfectly
-happy without us.  That is why I think it is every woman’s duty never to
-leave them alone for a single moment, except during this short breathing
-space after dinner; without which I believe we poor women would be
-absolutely worn to shadows.
+        <h6 class=" ALLONBY name"> ALLONBY </h6><p class="ALLONBY speech">  The annoying thing is that the wretches can be perfectly happy without us.  That is why I think it is every woman’s duty never to leave them alone for a single moment, except during this short breathing space after dinner; without which I believe we poor women would be absolutely worn to shadows.</p>
+        <p class="stage direction">[_Enter Servants with coffee_.]</p>
+        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY Speech"> Worn to shadows, dear?</p>
 
-[_Enter Servants with coffee_.]
+        <h6 class=" ALLONBY name"> ALLONBY </h6> <p class="ALLONBY speech">Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark.  They are always trying to escape from us.</p>
 
-LADY HUNSTANTON.  Worn to shadows, dear?
-
-MRS. ALLONBY.  Yes, Lady Hunstanton.  It is such a strain keeping men up
-to the mark.  They are always trying to escape from us.
-
-LADY STUTFIELD.  It seems to me that it is we who are always trying to
-escape from them.  Men are so very, very heartless.  They know their
-power and use it.
-
-LADY CAROLINE.  [_Takes coffee from Servant_.]  What stuff and nonsense
-all this about men is!  The thing to do is to keep men in their proper
-place.
-    </pre>
+        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY Speech"> It seems to me that it is we who are always trying to escape from them.  Men are so very, very heartless.  They know their power and use it.</p>
+            <p class="stage direction">[_Takes coffee from Servant_.]</p>
+        <h6 class="LADY name">LADY CAROLINE</h6><p class="LADY Speech">   What stuff and nonsense all this about men is!  The thing to do is to keep men in their proper place.</p>
 </body>
 </html>
