--- a/play.html
+++ b/play.html
@@ -17,7 +17,7 @@
 
         <h6 class=" ALLONBY name"> ALLONBY </h6> <p class="ALLONBY speech"> Persecute us?  I wish they did.</p> 
 
-        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY Speech"> My dear!</p>
+        <h6 class="LADY name">LADY HUNSTANTON</h6><p class="LADY Speech"> My dear!</p>
 
         <h6 class=" ALLONBY name"> ALLONBY </h6><p class="ALLONBY speech">  The annoying thing is that the wretches can be perfectly happy without us.  That is why I think it is every woman’s duty never to leave them alone for a single moment, except during this short breathing space after dinner; without which I believe we poor women would be absolutely worn to shadows.</p>
         <p class="stage direction">[_Enter Servants with coffee_.]</p>
