--- a/play.html
+++ b/play.html
@@ -5,28 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-4</title>
+    <link rel="stylesheet" href="wilde.css"></a>
 </head>
 <body>
     <h1>produced by Avinash Chundu</h1>
     <h3>A Woman of No Importance A Play</h3>
     <h4> The Drawing-room at Hunstanton Chase</h4>
   
-        <h6 class=" ALLONBY name"> ALLONBY </h6> <p class=" ALLONBY speech">What a comfort it is to have got rid of the men for a little!</p> 
+        <h6 class=" ALLONBY name"> ALLONBY </h6> <p class=" ALLONBY speech"> What a comfort it is to have got rid of the men for a little!</p> 
 
         <h6 class="LADY name">LADY STUTFIELD</h6> <p class="lady speech"> Yes; men persecute us dreadfully, don’t they?</p>
 
         <h6 class=" ALLONBY name"> ALLONBY </h6> <p class="ALLONBY speech"> Persecute us?  I wish they did.</p> 
 
-        <h6 class="LADY name">LADY HUNSTANTON</h6><p class="LADY Speech"> My dear!</p>
+        <h6 class="LADY name">LADY HUNSTANTON</h6><p class="LADY speech"> My dear!</p>
 
         <h6 class=" ALLONBY name"> ALLONBY </h6><p class="ALLONBY speech">  The annoying thing is that the wretches can be perfectly happy without us.  That is why I think it is every woman’s duty never to leave them alone for a single moment, except during this short breathing space after dinner; without which I believe we poor women would be absolutely worn to shadows.</p>
-        <p class="stage direction">[_Enter Servants with coffee_.]</p>
-        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY Speech"> Worn to shadows, dear?</p>
+        <p class="stage-direction">[_Enter Servants with coffee_.]</p>
+        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY speech"> Worn to shadows, dear?</p>
 
-        <h6 class=" ALLONBY name"> ALLONBY </h6> <p class="ALLONBY speech">Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark.  They are always trying to escape from us.</p>
+        <h6 class=" ALLONBY name"> ALLONBY </h6> <p class="ALLONBY speech"> Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark.  They are always trying to escape from us.</p>
 
-        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY Speech"> It seems to me that it is we who are always trying to escape from them.  Men are so very, very heartless.  They know their power and use it.</p>
-            <p class="stage direction">[_Takes coffee from Servant_.]</p>
-        <h6 class="LADY name">LADY CAROLINE</h6><p class="LADY Speech">   What stuff and nonsense all this about men is!  The thing to do is to keep men in their proper place.</p>
+        <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY speech"> It seems to me that it is we who are always trying to escape from them.  Men are so very, very heartless.  They know their power and use it.</p>
+            <p class="stage-direction">[_Takes coffee from Servant_.]</p>
+        <h6 class="LADY name">LADY CAROLINE</h6><p class="LADY speech"> What stuff and nonsense all this about men is!  The thing to do is to keep men in their proper place.</p>
 </body>
 </html>
