--- a/play.html
+++ b/play.html
@@ -29,5 +29,29 @@
         <h6 class="LADY name">LADY STUTFIELD</h6><p class="LADY speech"> It seems to me that it is we who are always trying to escape from them.  Men are so very, very heartless.  They know their power and use it.</p>
             <p class="stage-direction">[_Takes coffee from Servant_.]</p>
         <h6 class="LADY name">LADY CAROLINE</h6><p class="LADY speech"> What stuff and nonsense all this about men is!  The thing to do is to keep men in their proper place.</p>
+
+        <h3> TABLE</h3>
+            <table>
+                <tr>
+                    <th>Character</th>
+                    <th>Actor</th>
+                    <th>Offer</th>
+                </tr>
+                <tr>
+                    <td>Baron</td>
+                    <td>NTRS</td>
+                    <td>4.5million</td>
+                </tr>
+                <tr>
+                    <td>GEN</td>
+                    <td>NANI</td>
+                    <td>2.5million</td>
+                </tr>
+                <tr>
+                    <td>PRINCE</td>
+                    <td>Tarak</td>
+                    <td>3.5million</td>
+                </tr>
+            </table>
 </body>
 </html>
