--- a/play.html
+++ b/play.html
@@ -53,5 +53,6 @@
                     <td>3.5million</td>
                 </tr>
             </table>
+            <a href="play2.html"> next page</a>
 </body>
 </html>
