--- a/play.html
+++ b/play.html
@@ -54,5 +54,13 @@
                 </tr>
             </table>
             <a href="play2.html"> next page</a>
+            <ul class = "navbar-horizontal">
+                <li><i><a href= "play.html" > <i class = "fa fa-link"></fa>Link to play.html</a></i></li>
+                <li><i><a href= "play2.html" > <i class = "fa fa-link"></fa>Link to play2.html</a></i></li>
+            </ul>
+            <br></br>
+            <br></br>
+            <br></br>
+            <img src = "thor.png" height = "300" width= "300">
 </body>
 </html>
